--- a/react-project/package.json
+++ b/react-project/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format:fix": "prettier --write .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "cd .. && husky react-project/.husky"
   },
   "dependencies": {
     "react": "^18.3.1",
